--- a/ES2015/index.html
+++ b/ES2015/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/javascript" src="scripts/function_parameters.js">
+    <script type="text/javascript" src="scripts/rest_operator.js">
     </script>
 </head>
 
