--- a/ESMODULES/index.html
+++ b/ESMODULES/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <script>
-        System.import('src/moduleA.js');
+        System.import('src/moduleC.js');
     </script>
 </body>
 
