--- a/ES2015/index.html
+++ b/ES2015/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/JavaScript" src="scripts/for_each.js">
+    <script type="text/JavaScript" src="scripts/symbols.js">
     </script>
 </head>
 
 <body>
+
+
 
 </body>
 
